package behavior.strategy.cc3;

public interface IKhuyenMai {
    double tinhTienKhuyenMai(double tongTienHang);
}
