package behavior.strategy.cc3;

public interface IThanhToan {
    double tinhTienGiam(double tongTienHang);
}
